# 01af4400

./: .env  .gitignore  README.md  dev.sh  package-lock.json  package.json  playwright.config.ts
.github/workflows/: build.yml
e2e/: app.spec.ts  helpers.ts
scripts/: check.sh  download-sherpa-libs.sh  generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  recognizer.rs  store.rs
src/components/: Icons.tsx  Sidebar.tsx
src/lib/: api.ts  types.ts  useRecorder.ts
src/pages/: CreateTask.tsx  ImportTask.tsx  TaskDetail.tsx  TaskList.tsx  TaskResults.tsx
