[package]
name = "text-to-voice"
version = "0.1.0"
description = "跟读任务桌面客户端"
authors = ["you"]
edition = "2021"

[lib]
name = "text_to_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sherpa-onnx = "0.1"

